# api/file.go
@@ -7,6 +7,15 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// UploadFile
+// @Tags      file
+// @Summary   上传用户头像
+// @Security  ApiKeyAuth
+// @accept    multipart/form-data
+// @Produce   application/json
+// @Param     file  formData  file                     true  "上传文件"
+// @Success   200   {object}  response.Response{data=map[string]interface{},msg=string}  "上传成功"
+// @Router    /api/file/upload [post]
 func UploadFile(c *gin.Context) {
 	_, fileHeader, err := c.Request.FormFile("file")
 	if err != nil {
@@ -18,14 +27,14 @@ func UploadFile(c *gin.Context) {
 		if err != nil {
 			response.Error(c, utils.ErrorFile)
 		} else {
-			response.SuccessDetailed(c, "上传成功", url)
+			response.SuccessDetailed(c, "上传成功", response.File{Url: url})
 		}
 	} else {
 		url, err := utils.SaveFileLocal(fileHeader)
 		if err != nil {
 			response.Error(c, utils.ErrorFile)
 		} else {
-			response.SuccessDetailed(c, "上传成功", url)
+			response.SuccessDetailed(c, "上传成功", response.File{Url: url})
 		}
 	}
 }
